--- a/index.html
+++ b/index.html
@@ -57,83 +57,13 @@
     <h1 class="cover"><span><span>client</span></span></h1>
   </div>
   <h2 class="">Packages</h2>
-  <div class="table"><a data-name="181132684%2FPackages%2F62532462" anchor-label="meteor.api.items" id="181132684%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
+  <div class="table"><a data-name="-195711558%2FPackages%2F62532462" anchor-label="meteor.api" id="-195711558%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
     <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
       <div>
         <div class="main-subrow ">
           <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.items/index.html">meteor.api.items</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="181132684%2FPackages%2F62532462"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right"></div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="1906117472%2FPackages%2F62532462" anchor-label="meteor.api.loot" id="1906117472%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
-    <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.loot/index.html">meteor.api.loot</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="1906117472%2FPackages%2F62532462"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right"></div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="422108650%2FPackages%2F62532462" anchor-label="meteor.api.npcs" id="422108650%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
-    <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.npcs/index.html">meteor.api.npcs</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="422108650%2FPackages%2F62532462"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right"></div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="-2063505568%2FPackages%2F62532462" anchor-label="meteor.api.objects" id="-2063505568%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
-    <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.objects/index.html">meteor.api.objects</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-2063505568%2FPackages%2F62532462"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right"></div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="1056389239%2FPackages%2F62532462" anchor-label="meteor.api.packets" id="1056389239%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
-    <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.packets/index.html">meteor.api.packets</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="1056389239%2FPackages%2F62532462"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right"></div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="386382462%2FPackages%2F62532462" anchor-label="meteor.api.players" id="386382462%2FPackages%2F62532462" data-filterable-set=":client:dokkaHtml/main"></a>
-    <div class="table-row" data-filterable-current=":client:dokkaHtml/main" data-filterable-set=":client:dokkaHtml/main">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="client/meteor.api.players/index.html">meteor.api.players</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="386382462%2FPackages%2F62532462"></span>
+              <div><a href="client/meteor.api/index.html">meteor.api</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-195711558%2FPackages%2F62532462"></span>
                 <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
               </span></span></div>
           <div class="pull-right"></div>
