--- a/navigation.html
+++ b/navigation.html
@@ -1,42 +1,24 @@
 <div class="sideMenuPart" id="client-nav-submenu" pageId="client::////PointingToDeclaration//62532462">
   <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="index.html"><span><span>client</span></span></a></div>
-  <div class="sideMenuPart" id="client-nav-submenu-0" pageId="client::meteor.api.items////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.items/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>items</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-0-0" pageId="client::meteor.api.items/Bank///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.items/-bank/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Bank</span></span></span></span></a></div>
+  <div class="sideMenuPart" id="client-nav-submenu-0" pageId="client::meteor.api////PointingToDeclaration//62532462">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api/index.html"><span>meteor.</span><wbr></wbr><span>api</span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-0" pageId="client::meteor.api/ClientPackets///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-client-packets/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span>Client</span><wbr></wbr><span><span>Packets</span></span></span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="client-nav-submenu-0-1" pageId="client::meteor.api.items/Items///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.items/-items/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Items</span></span></span></span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-1" pageId="client::meteor.api/Items///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-items/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Items</span></span></span></span></a></div>
     </div>
-  </div>
-  <div class="sideMenuPart" id="client-nav-submenu-1" pageId="client::meteor.api.loot////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-1&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.loot/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>loot</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-1-0" pageId="client::meteor.api.loot/Loots///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.loot/-loots/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Loots</span></span></span></span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-2" pageId="client::meteor.api/Loots///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-loots/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Loots</span></span></span></span></a></div>
     </div>
-  </div>
-  <div class="sideMenuPart" id="client-nav-submenu-2" pageId="client::meteor.api.npcs////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-2&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.npcs/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>npcs</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-2-0" pageId="client::meteor.api.npcs/NPCs///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.npcs/-n-p-cs/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>NPCs</span></span></span></span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-3" pageId="client::meteor.api/NPCs///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-n-p-cs/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>NPCs</span></span></span></span></a></div>
     </div>
-  </div>
-  <div class="sideMenuPart" id="client-nav-submenu-3" pageId="client::meteor.api.objects////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-3&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.objects/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>objects</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-3-0" pageId="client::meteor.api.objects/Objects///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.objects/-objects/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Objects</span></span></span></span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-4" pageId="client::meteor.api/Objects///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-objects/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Objects</span></span></span></span></a></div>
     </div>
-  </div>
-  <div class="sideMenuPart" id="client-nav-submenu-4" pageId="client::meteor.api.packets////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-4&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.packets/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>packets</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-4-0" pageId="client::meteor.api.packets/ClientPackets///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.packets/-client-packets/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span>Client</span><wbr></wbr><span><span>Packets</span></span></span></span></a></div>
-    </div>
-  </div>
-  <div class="sideMenuPart" id="client-nav-submenu-5" pageId="client::meteor.api.players////PointingToDeclaration//62532462">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;client-nav-submenu-5&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="client/meteor.api.players/index.html"><span>meteor.</span><wbr></wbr><span>api.</span><wbr></wbr><span>players</span></a></div>
-    <div class="sideMenuPart" id="client-nav-submenu-5-0" pageId="client::meteor.api.players/Players///PointingToDeclaration//62532462">
-      <div class="overview"><a href="client/meteor.api.players/-players/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Players</span></span></span></span></a></div>
+    <div class="sideMenuPart" id="client-nav-submenu-0-5" pageId="client::meteor.api/Players///PointingToDeclaration//62532462">
+      <div class="overview"><a href="client/meteor.api/-players/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon object"></span><span class="nav-link-child"><span><span>Players</span></span></span></span></a></div>
     </div>
   </div>
 </div>
